--- a/_config.yml
+++ b/_config.yml
@@ -13,10 +13,10 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: chiisen 的 Jekyll GitHub Pages
+title: chiisen 穠繙 Jekyll GitHub Pages
 email: chiisen@hotmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  邊改邊學 Jekyll 
+  Try Jekyll 
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: 
