--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Sam 的經歷(jekyll版)
+title: Sam 的經歷(Jekyll版)
 email: liawchiisen@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   自小因家庭工廠轉型接觸工業電腦，自學多種程式語言。有豐富遊戲開發和專案管理經驗，涉足 VR/AR/MR 開發，也做過系統優化，期待加入貴公司。
