✨ feat: 新增首頁文章顯示限制，最多顯示 5 篇文章

--- a/_config.yml
+++ b/_config.yml
@@ -54,6 +54,8 @@ theme: minima
 plugins:
   - jekyll-feed
 
+home_post_limit: 5
+
 # Exclude from processing.
 # 排除處理的項目
 # The following items will not be processed, by default.
