--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@
 # in the templates via {{ site.myvariable }}.
 # 這些設定用於個人化你的新網站。在 HTML 檔案中，可以透過 {{ site.title }}、{{ site.email }} 等方式存取。
 # 你也可以自訂變數，並在模板中透過 {{ site.myvariable }} 存取。
-title: 🏡 Sam 的開源作品(持續累積中🏃‍♂️)(Jekyll 1.0.3 版)
+title: 🏡 Sam 的開源作品(持續累積中🏃‍♂️)(GitHub Pages +Jekyll 1.0.3 版)
 email: liawchiisen@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   自小因家庭工廠轉型接觸工業電腦，自學多種程式語言。有豐富遊戲開發和專案管理經驗，涉足 VR/AR/MR 開發，也做過系統優化，期待加入貴公司。
